# csa

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dashboard  docker-compose.yml  main.py  pyproject.toml
api/: main.py  models.py
dashboard/: app.py
data/: __init__.py  data_loader.py  data_pipeline.py  data_preprocessing.py  inspect_and_test.ipynb  utils.py
data/src/: data_loader.py
db/: connection.py  models.py  operations.py  schemas.py
ml/: __init__.py
ml/inference/: __init__.py  predictor.py
ml/models/: __init__.py  sentiment_lightning_module.py  sentiment_model.py
ml/training/: __init__.py  lightning_datamodule.py  train_sentiment_script.py
notebooks/: data.ipynb  db.ipynb  inference.ipynb  ml.ipynb
tests/: test_auth.py  test_data_preprocessing.py  test_integration.py  test_predictor.py
