[project]
name = "csa"
version = "1.0.0"
description = "Customer Sentiment Analyzer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "requests>=2.32.5",
]

[dependency-groups]
api = [
    "fastapi>=0.116.2",
    "uvicorn>=0.35.0",
    "torch>=2.8.0",
    "transformers>=4.56.1",
    "sqlalchemy>=2.0.43",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.9",
    "asyncpg>=0.30.0",
    "alembic>=1.16.5",
    "bcrypt>=5.0.0",
]

dashboard = [
    "streamlit>=1.49.1",
    "plotly>=6.3.0",
    "matplotlib>=3.10.6",
]

training = [
    "pytorch-lightning>=2.5.5",
    "tensorboard>=2.20.0",
    "torchmetrics>=1.8.2",
    "datasets>=4.1.0",
    "jupyter>=1.1.1",
    "torch>=2.8.0",
    "transformers>=4.56.1",
]

dev = [
    "pytest>=8.4.2",
]
